<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/detailsImage"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/texte_Placeholder"
        android:scaleType="centerInside"
        tools:src="@drawable/giorno" />

    <TextView
        android:id="@+id/detailsTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/texte_Details_Titre"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/detailsCoord"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:layout_marginBottom="16dp"
        android:text="@string/texte_Details_Coord" />

    <TextView
        android:id="@+id/detailsContenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/texte_Details_Contenu"
        android:layout_weight="1"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/supprimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:onClick="supprimerNote"
        android:paddingBottom="10dp"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
</LinearLayout>