<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/creationImage"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/texte_Placeholder"
        android:scaleType="centerInside"
        tools:src="@drawable/giorno" />

    <Spinner
        android:id="@+id/Image_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="16dp" />

    <EditText
        android:id="@+id/creationTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/texte_Creation_Titre"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/creationContenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/texte_Creation_Contenu"
        android:inputType="text"
        android:maxLines="3" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/modifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="end"
        android:onClick="CreerNote"
        app:srcCompat="@android:drawable/ic_menu_send" />

</LinearLayout>